feat: Import audio assets via Vite
This change updates how audio files are handled by importing them directly through Vite. This allows Vite to manage and optimize asset loading. The application now references audio files via imported paths instead of static public paths. This also involves updating vercel.json to correctly route assets.

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
   "rewrites": [
-    { "source": "/((?!audio|assets|favicon.ico).*)", "destination": "/index.html" }
+    { "source": "/((?!assets|favicon.ico).*)", "destination": "/index.html" }
   ],
   "headers": [
     {
-      "source": "/audio/(.*)",
+      "source": "/assets/(.*)",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
-        { "key": "Content-Type", "value": "audio/mpeg" },
         { "key": "Access-Control-Allow-Origin", "value": "*" }
       ]
     }
